Remove overflow:hidden from tab-content for rank graph fix

--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -332,7 +332,6 @@
 .tab-content {
     transition: all .5s ease;
     background-color: white;
-    overflow: hidden;
     font-size: 80%;
     z-index: 0;
 }
